[project]
name = "nodus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.39.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pyvis>=0.3.2",
    "streamlit>=1.50.0",
]

[project.scripts]
nodus = "nodus:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []
